--- a/module3.html
+++ b/module3.html
@@ -20,7 +20,7 @@
 		  <div class="collapse navbar-collapse" id="collapsibleNavbar" id ="collapseNavbar">
 		    <ul class="navbar-nav">
 		      <li class="nav-item" id="navItem">
-		        <a class="nav-link" href="#"> Chickn</a>
+		        <a class="nav-link" href="#"> Chicken</a>
 		      </li>
 		      <li class="nav-item" id="navItem">
 		        <a class="nav-link" href="#"> Mutton</a>
