--- a/module3.html
+++ b/module3.html
@@ -34,6 +34,7 @@
 	</div>
 	<div class="container-fluid" id="menu-text-box">
 		Menu
+		<p> squeeze the site to see the top-right menu button</p>
 	</div>
 	<div class="container" id="chicken-box">
 		<h2 id="chicken-heading"> Chicken</h2>
